--- a/unidad2.html
+++ b/unidad2.html
@@ -5,12 +5,106 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
+     <head>
         <title>TODO supply a title</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <div>TODO write content</div>
+       <div class="menu-nav">
+            <ul>
+                <li><a  href="presentacion.html">Presentacion</a></li>
+                <li><a href="unidad1.html">Unidad 1</a></li>
+                <li><a class="active"  href="unidad2.html">Unidad 2</a></li>
+                <li><a href="unidad3.html">Unidad 3</a></li>
+            </ul>
+        </div>
+        <div class="container">
+            <section>
+                <header>
+                    <img src="source/unidad1/cabezotesmodund-01-01.jpg" alt=""/>
+                </header>
+            </section>
+            <section>
+                <header>
+                        <img src="source/unidad1/objetivo.jpg" alt=""/>
+                    </header>
+                <article>
+                    <p>Lograr que el estudiante descubra la importancia del sistema operativo para el 
+                        funcionamiento de un pc. la organización de archivos y carpetas, y en general 
+                        para la instalación y uso de las diferentes aplicaciones diseñadas para todos 
+                        los tipos de usuarios. Reconociendo las precauciones en cuanto a estrategias 
+                        de seguridad mínimas, además le permita identificar y usar las TIC en el 
+                        entorno universitario, personal y laboral.</p>
+                </article>
+            </section>
+            <section>
+                <header>
+                    <img src="source/unidad1/btn_contenido2.jpg" alt=""/>
+                </header>
+                <article>
+                    <h3><i class="fa fa-file-text-o fa-2x"></i>Temas de la  Unidad </h3>
+                    <ol id="contenido">
+                        <li>2.1 INTRODUCCIÓN
+                            <ul>
+                                <li>¿Qué es y cuando se usa Microsoft Word Office?</li>
+                                <li>Elementos de la ventana inicial de Word</li>
+                                <li>Barras de herramientas</li>
+                                <li>Salir de Word</li>
+                            </ul>
+                        </li>
+                        <li>2.2 OPERACIONES GENERALES
+                            <ul>
+                                <li>Introducir texto</li>
+                                <li>Desplazamientos por el texto</li>
+                                <li>Selecciones  / Restaurar texto</li>
+                                <li>Archivar / Abrir un documento</li>
+                            </ul>
+                        </li>
+                        <li>2.3 FORMATOS DE CARÁCTER
+                            <ul>
+                                <li>Tipo, tamaño y aspectos de los caracteres</li>
+                                <li>Botón copiar el formato de carácter</li>
+                                <li>Comandos abreviados (combinación de teclas)</li>
+                            </ul>
+                        </li>
+                        <li>2.4 FORMATOS DE PARRAFO
+                            <ul>
+                                <li>Alineación</li>
+                                <li>Sangría y tabulaciones</li>
+                                <li>Bordes y sombreados</li>
+                            </ul>
+                        </li>
+                        <li>2.5 INSERCION DE OBJETOS
+                            <ul>
+                                <li>Inserción de imágenes</li>
+                                <li>Inserción de tablas</li>
+                                <li>Inserción formas  y SmartArt</li>
+                                <li>Inserción WordArt</li>
+                            </ul>
+                        </li>
+                        <li>2.6 FORMATOS DE PÁGINA
+                            <ul>
+                                <li>Tamaño y márgenes del documento</li>
+                                <li>Paginación y numeración de páginas</li>
+                                <li>Elementos de autocorrección</li>
+                                <li>Ortografía</li>
+                            </ul>
+                        </li>
+                        <li>2.7 OPCIONES DE IMPRESIÓN
+                            <ul>
+                                <li>Vista preliminar</li>
+                                <li>Seleccionar impresora</li>
+                                <li>Intervalo de paginas</li>
+                                <li>Copias</li>
+                                <li>Propiedades</li>
+                            </ul>
+                        </li>
+                    </ol>
+                </article>
+            </section>
+        </div>
     </body>
 </html>
