--- a/unidad2.html
+++ b/unidad2.html
@@ -32,12 +32,11 @@ and open the template in the editor.
                     <img src="source/unidad2/objetivo.jpg" alt=""/>
                     </header>
                 <article>
-                    <p>Lograr que el estudiante descubra la importancia del sistema operativo para el 
-                        funcionamiento de un pc. la organización de archivos y carpetas, y en general 
-                        para la instalación y uso de las diferentes aplicaciones diseñadas para todos 
-                        los tipos de usuarios. Reconociendo las precauciones en cuanto a estrategias 
-                        de seguridad mínimas, además le permita identificar y usar las TIC en el 
-                        entorno universitario, personal y laboral.</p>
+                    <p> Motivar al estudiante a conocer y a manejar las herramientas básicas 
+                        que proporciona Word® para la creación,modificación e impresión de 
+                        documentos de texto, logrando que las utilice adecuada y eficientemente 
+                        en la elaboración de documentos de carácter académico,profesional 
+                        u/o particular</p>
                 </article>
             </section>
             <section>
